Story #11666: Cleanup - Refactor attachment units mapping - use ids instead of pseudo title